Opened 11 years ago
Closed 8 years ago
#6143 closed bug (fixed)
[Terminal] Clearing the screen should use the current background color instead of the default Terminal color
Reported by: | oco | Owned by: | siarzhuk |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/Development |
Keywords: | gci2011 | Cc: | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Steps to reproduce :
- echo -e "\E[42m" to set the background color to green for example
- then clear.
Under Linux, all the terminal background is set to green, but under Haiku, only the prompt use the green background. The rest of the screen is set to white (my default Terminal background color).
The problem occur for the following escape sequences :
- [K used to erase display
- [*J used to erase a line
Attachments (3)
Change History (14)
comment:1 by , 11 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 11 years ago
comment:6 by , 11 years ago
Which one? Text color is still green instead of white in hrev38318. And background is still partly black, which is also reproducible in mcedit.
comment:8 by , 9 years ago
Version: | R1/alpha2 → R1/Development |
---|
comment:9 by , 9 years ago
Keywords: | gci2011 added |
---|
The problem was checked during GCI 2011.
It is still a problem.
After trying the command 'echo -e "\E[42m"' in both, Linux and Haiku (hrev43238 on VBox 4.1.4), in Linux, clearing the screen after it changes the whole terminal background to green, while in Haiku, only background of currently written text is green (input and output of commands).
hrev38316 should make [*J work better. I'm now investigating the other clear cases.